acid/k8s/devops-training/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-training
  template:
    metadata:
      labels:
        app: devops-training
    spec:
      containers:
        - name: devops-training
          image: walidbensmida/devops-training:v13
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
